--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Hello, Rails!</h1>
+<h1>Products</h1>
+
+<ul>
+  <% @products.each do |product| %>
+    <li>
+      <%= product.title %>
+    </li>
+  <% end %>
+</ul>
