--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -4,16 +4,25 @@
   <div>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
+    <% @product.errors.full_messages_for(:title).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
     <%= form.label :description %><br>
     <%= form.text_area :description %>
+    <% @product.errors.full_messages_for(:description).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
     <%= form.label :color %><br>
     <%= form.text_area :color %>
+    <% @product.errors.full_messages_for(:color).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
