--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,4 +2,14 @@
 
 <p> <%= @product.description %> </p>
 
-<%= link_to "Edit", edit_product_path(@product) %>
+<ul>
+    <li>
+        <%= link_to "Edit", edit_product_path(@product) %>
+    </li>
+    <li>
+        <%= link_to "Destroy", product_path(@product), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Are you sure?"
+                  } %>
+    </li>
+</ul>
