--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Edit Product</h1>
+<h1 class="text-2xl font-bold sm:text-3xl mb-4">Ürün Güncelleme</h1>
+
 
 <%= render "form", product: @product %>
