--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,26 @@
-<h1>Products</h1>
+<h1 class="text-2xl font-bold sm:text-3xl mb-8">Ürünler</h1>
 
-<ul>
+
+<ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8 mb-8 ">
   <% @products.each do |product| %>
     <li>
-      <%= link_to product.title, product %>
+      <%= link_to product, :class => "block rounded-xl border border-gray-100 p-8 shadow-xl" do %>
+        
+        <div class="mt-4 text-gray-500 sm:pr-8">
+          <%= product.brand.title%>
+          <h3 class="mt-4 text-xl font-bold text-gray-900"><%= product.title%></h3>
+
+          <p class="mt-2 hidden text-sm sm:block">
+            <%= product.description%>
+          </p>
+          <p class="mt-2 hidden text-sm sm:block">
+            <%= product.color%>
+          </p>
+        </div>
+      <% end %>
     </li>
+
   <% end %>
 </ul>
 
-<%= link_to "New Product", new_product_path %>
+<%= link_to "Yeni Ürün Oluştur", new_product_path, :class => "inline-flex w-full items-center justify-center rounded-lg bg-black px-5 py-3 text-white sm:w-auto cursor-pointer" %>
