--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,4 @@
-<h1>New Product</h1>
+<h1 class="text-2xl font-bold sm:text-3xl mb-4">Yeni Ürün Oluştur</h1>
+
 
 <%= render "form", product: @product %>
