--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,18 +1,24 @@
-<h1> <%= @product.title %> </h1>
+<a class="block rounded-xl border border-gray-100 p-8 shadow-xl">
+    <div class="mt-4 text-gray-500 sm:pr-8"> 
+        <%= @product.brand.title%>
+        <h3 class="mt-4 text-xl font-bold text-gray-900"><%= @product.title%></h3>
+        <p class="mt-2 hidden text-sm sm:block">
+            <%= @product.description%>
+        </p>
+        <p class="mt-2 hidden text-sm sm:block">
+            <%= @product.color%>
+        </p>
+    </div>
+</a>
 
-<p> <%= @product.description %> </p>
-
-<p> <%= @product.brand.title %> </p>
-
-
-<ul>
+<ul class="flex gap-4 mt-8">
     <li>
-        <%= link_to "Edit", edit_product_path(@product) %>
+        <%= link_to "Düzenle", edit_product_path(@product), :class => "inline-flex w-full items-center justify-center rounded-lg bg-blue-500 px-5 py-3 text-white w-24 cursor-pointer"  %>
     </li>
     <li>
-        <%= link_to "Destroy", product_path(@product), data: {
+        <%= link_to "Sil", product_path(@product), data: {
                     turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %>
+                    turbo_confirm: "Silmek istediğinizden emin misiniz?"
+                  },:class => "inline-flex w-full items-center justify-center rounded-lg bg-red-500 px-5 py-3 text-white w-24 cursor-pointer"  %>
     </li>
 </ul>
